--- a/conf/client.conf
+++ b/conf/client.conf
@@ -8,7 +8,8 @@ connect_timeout = 5
 network_timeout = 60
 
 # the base path to store log files
-base_path = /home/yuqing/fastdfs
+##base_path = /home/yuqing/fastdfs
+base_path = /Users/jintao9/linux2014/wjt_projs/data/fastdfs_data/logs 
 
 # tracker_server can ocur more than once for multi tracker servers.
 # the value format of tracker_server is "HOST:PORT",
@@ -19,8 +20,9 @@ base_path = /home/yuqing/fastdfs
 #   for example: 192.168.2.100,122.244.141.46:22122
 #   another eg.: 192.168.1.10,172.17.4.21:22122
 
-tracker_server = 192.168.0.196:22122
-tracker_server = 192.168.0.197:22122
+##tracker_server = 192.168.0.196:22122
+##tracker_server = 192.168.0.197:22122
+tracker_server = 10.222.100.10:22122
 
 #standard log level as syslog, case insensitive, value list:
 ### emerg for emergency
