--- a/conf/storage.conf
+++ b/conf/storage.conf
@@ -46,7 +46,8 @@ stat_report_interval = 60
 # NOTE: the binlog files maybe are large, make sure
 #       the base path has enough disk space,
 #       eg. the disk free space should > 50GB
-base_path = /home/yuqing/fastdfs
+##base_path = /home/yuqing/fastdfs
+base_path = /Users/jintao9/linux2014/wjt_projs/data/fastdfs_data/storage 
 
 # max concurrent connections the server supported,
 # you should set this parameter larger, eg. 10240
@@ -126,7 +127,8 @@ store_path_count = 1
 #       the store paths' order is very important, don't mess up!!!
 #       the base_path should be independent (different) of the store paths
 
-store_path0 = /home/yuqing/fastdfs
+##store_path0 = /home/yuqing/fastdfs
+store_path0 = /Users/jintao9/linux2014/wjt_projs/data/fastdfs_data/store_path0 
 #store_path1 = /home/yuqing/fastdfs2
 
 # subdir_count  * subdir_count directories will be auto created under each 
@@ -142,8 +144,9 @@ subdir_count_per_path = 256
 #   for example: 192.168.2.100,122.244.141.46:22122
 #   another eg.: 192.168.1.10,172.17.4.21:22122
 
-tracker_server = 192.168.209.121:22122
-tracker_server = 192.168.209.122:22122
+##tracker_server = 192.168.209.121:22122
+##tracker_server = 192.168.209.122:22122
+tracker_server = 10.222.100.10:22122
 
 #standard log level as syslog, case insensitive, value list:
 ### emerg for emergency
