--- a/conf/tracker.conf
+++ b/conf/tracker.conf
@@ -20,7 +20,9 @@ connect_timeout = 5
 network_timeout = 60
 
 # the base path to store data and log files
-base_path = /home/yuqing/fastdfs
+##base_path = /home/yuqing/fastdfs
+base_path = /Users/jintao9/linux2014/wjt_projs/data/fastdfs_data/logs
+
 
 # max concurrent connections this server support
 # you should set this parameter larger, eg. 10240
